# dam-regulation-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/drs/: __init__.py
src/drs/api/: __init__.py  app.py
src/drs/api/routers/: __init__.py
src/drs/api/routers/v1/: __init__.py  forecast.py  observations.py  recommendations.py  reservoirs.py  training.py
src/drs/cli/: __init__.py  commands.py
src/drs/core/: __init__.py  config.py  logging.py
src/drs/db/: __init__.py  engine.py  models.py  seed.py
src/drs/schemas/: __init__.py  forecast.py  observation.py  recommendation.py  reservoir.py
src/drs/services/: __init__.py  data_service.py  forecast_service.py  recommendation_service.py  training_service.py
tests/: conftest.py  test_forecast.py  test_recommendation.py
