# =============================================================================
# Dam Regulation System (DRS) — pyproject.toml
# Build: hatchling  |  Package manager: uv
# =============================================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project Metadata
# ---------------------------------------------------------------------------
[project]
name        = "dam-regulation-system"
version     = "0.1.0"
description = "Enterprise-grade Dam Regulation System (DRS): ML-driven flood forecasting and controlled-release recommendation engine."
readme      = "README.md"
license     = { text = "All Rights Reserved" }
requires-python = ">=3.11"

authors = [
    { name = "DRS Engineering", email = "engineering@drs.local" },
]

keywords = [
    "dam", "reservoir", "flood", "forecasting", "water-management", "fastapi",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]

# ---------------------------------------------------------------------------
# Runtime Dependencies
# ---------------------------------------------------------------------------
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",

    # Database / ORM
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",           # async SQLite driver

    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Machine Learning
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",

    # Logging
    "loguru>=0.7.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",                # rich terminal output for CLI

    # Utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
]

# ---------------------------------------------------------------------------
# Optional / Dev Dependencies
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",               # async test client for FastAPI
    "mypy>=1.10.0",
    "ruff>=0.5.0",                 # linter + formatter
    "types-python-dateutil>=2.9.0",
]

# ---------------------------------------------------------------------------
# Entry Points
# ---------------------------------------------------------------------------
[project.scripts]
drs     = "drs.cli.commands:cli"
drs-api = "drs.api.app:start"

# ---------------------------------------------------------------------------
# Hatch Build — src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/drs"]

# ---------------------------------------------------------------------------
# Mypy — strict typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
plugins                = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module                 = "sklearn.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 180
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Pydantic V2 resolves field annotations via get_type_hints() at model creation;
# datetime / stdlib types must remain in module globals, not TYPE_CHECKING.
"src/drs/schemas/*.py" = ["TCH003"]
# FastAPI inspects route-function annotations at startup via get_type_hints();
# request/response types must stay importable at runtime.
# B008: FastAPI Query/Depends in function defaults is idiomatic and intentional.
"src/drs/api/routers/*.py" = ["TCH001", "TCH002", "TCH003", "B008"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
log_cli      = true
log_level    = "INFO"
